# gnome-install-extension

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: gnome.rs  install.rs  main.rs  search.rs
